# parquet-haskell

./: .gitignore  README.md  doctests.hs  parquet.cabal
src/: Main.hs
src/Data/Parquet/Internal/: DataPageTypes.hs  Encodings.hs  Enums.hs  FileMetadataTypes.hs
src/Data/Parquet/Internal/Thrift/: CompactProtocol.hs  Parsers.hs  ProtocolHelpers.hs  Types.hs
