name:                parquet
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Laurence Rouesnel
maintainer:          laurence@rouesnel.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.18


executable parquet
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:          base >= 4.7 && < 4.8
                        , attoparsec >= 0.12
                        , bytestring >= 0.10
                        , text       >= 1.1
                        , vector     >= 0.10
                        , containers
                        , ghc-prim
                        , binary
                        , hashable
                        , text
                        , unordered-containers
                        , vector
                        , split
  hs-source-dirs:      src
  default-language:    Haskell2010
